--- a/src/components/Card.scss
+++ b/src/components/Card.scss
@@ -5,13 +5,39 @@
   padding-bottom: 4rem;
   display: flex;
   flex-direction: column;
-  gap: 1rem;
+}
+
+.card > :not(:last-child) {
+  margin-bottom: 1rem;
+}
+
+@supports (display: subgrid) {
+  .card {
+    row-gap: 1rem;
+  }
+
+  .card > :not(:last-child) {
+    margin-bottom: 0;
+  }
 }
 
 .card-body {
   display: flex;
   flex-direction: column;
-  row-gap: 0.2rem;
+}
+
+.card-body > :not(:last-child) {
+  margin-bottom: 0.2rem;
+}
+
+@supports (display: subgrid) {
+  .card-body {
+    row-gap: 0.2rem;
+  }
+
+  .card-body > :not(:last-child) {
+    margin-bottom: 0;
+  }
 }
 
 .card-image {
@@ -24,8 +50,29 @@
 .card-footer {
   display: flex;
   flex-wrap: wrap;
-  column-gap: 5.5rem;
-  row-gap: 1rem;
+}
+
+.card-footer > * {
+  margin-bottom: 5.5rem;
+}
+
+.card-footer > :not(:last-child) {
+  margin-right: 1rem;
+}
+
+@supports (display: subgrid) {
+  .card-footer {
+    column-gap: 5.5rem;
+    row-gap: 1rem;
+  }
+
+  .card-footer > * {
+    margin-bottom: 0;
+  }
+
+  .card-footer > :not(:last-child) {
+    margin-right: 0;
+  }
 }
 
 .card-link {
