--- a/src/components/Dropdown.scss
+++ b/src/components/Dropdown.scss
@@ -97,14 +97,48 @@
       padding: 1rem;
       display: flex;
       flex-wrap: wrap;
-      gap: 3rem;
+    }
+
+    .dropdown-item-groups > * {
+      margin-bottom: 3rem;
+    }
+
+    .dropdown-item-groups > :not(:last-child) {
+      margin-right: 3rem;
+    }
+
+    @supports (display: subgrid) {
+      .dropdown-item-groups {
+        gap: 3rem;
+      }
+
+      .dropdown-item-groups > * {
+        margin-bottom: 0;
+      }
+
+      .dropdown-item-groups > :not(:last-child) {
+        margin-right: 0;
+      }
     }
 
     .dropdown-item-group {
       display: flex;
       flex-direction: column;
       flex-basis: 16%;
-      gap: 1.5rem;
+    }
+
+    .dropdown-item-group > :not(:last-child) {
+      margin-bottom: 1.5rem;
+    }
+
+    @supports (display: subgrid) {
+      .dropdown-item-group {
+        gap: 1.5rem;
+      }
+
+      .dropdown-item-group > :not(:last-child) {
+        margin-bottom: 0;
+      }
     }
 
     .dropdown-item-group-title {
@@ -114,8 +148,21 @@
     .dropdown-item-group-items {
       display: flex;
       flex-direction: column;
-      gap: 1.5rem;
       list-style: none;
+    }
+
+    .dropdown-item-group-items > :not(:last-child) {
+      margin-bottom: 1.5rem;
+    }
+
+    @supports (display: subgrid) {
+      .dropdown-item-group-items {
+        gap: 1.5rem;
+      }
+
+      .dropdown-item-group-items > :not(:last-child) {
+        margin-bottom: 0;
+      }
     }
 
     .dropdown-item-group-item > a {
