--- a/src/components/Footer.scss
+++ b/src/components/Footer.scss
@@ -19,9 +19,32 @@
 }
 
 .footer-body {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(170px, 1fr));
-  row-gap: 3rem;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.footer-body > * {
+  margin-bottom: 3rem;
+}
+
+.footer-body > :not(:last-child) {
+  margin-right: 3rem;
+}
+
+@supports (display: grid) {
+  .footer-body {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(170px, 1fr));
+    gap: 3rem;
+  }
+
+  .footer-body > * {
+    margin-bottom: 0;
+  }
+
+  .footer-body > :not(:last-child) {
+    margin-right: 0;
+  }
 }
 
 .footer-title {
@@ -33,7 +56,20 @@
 .footer-section {
   display: flex;
   flex-direction: column;
-  gap: 1.3rem;
+}
+
+.footer-section > :not(:last-child) {
+  margin-bottom: 1.3rem;
+}
+
+@supports (display: subgrid) {
+  .footer-section {
+    row-gap: 1.3rem;
+  }
+
+  .footer-section > :not(:last-child) {
+    margin-bottom: 0;
+  }
 }
 
 .footer-link {
@@ -47,18 +83,50 @@
   justify-content: space-between;
   align-items: center;
   flex-wrap: wrap;
-  gap: 1rem;
 }
 
-.footer-language {
-  a {
-    @include footer-link();
-    display: flex;
-    align-items: center;
-    gap: 0.7rem;
-    img {
-      width: 25px;
-      height: 25px;
+.footer-footer > * {
+  margin-bottom: 1rem;
+}
+
+.footer-footer > :not(:last-child) {
+  margin-right: 1rem;
+}
+
+@supports (display: subgrid) {
+  .footer-footer {
+    gap: 1rem;
+  }
+
+  .footer-footer > * {
+    margin-bottom: 0;
+  }
+
+  .footer-footer > :not(:last-child) {
+    margin-right: 0;
+  }
+}
+
+.footer-language > a {
+  @include footer-link();
+  display: flex;
+  align-items: center;
+  img {
+    width: 25px;
+    height: 25px;
+  }
+
+  & > :not(:last-child) {
+    margin-right: 0.7rem;
+  }
+}
+
+@supports (display: subgrid) {
+  .footer-language > a {
+    column-gap: 0.7rem;
+
+    & > :not(:last-child) {
+      margin-right: 0;
     }
   }
 }
@@ -66,12 +134,33 @@
 .footer-copyright {
   display: flex;
   flex-wrap: wrap;
-  gap: 1rem;
 
   a {
     @include footer-link();
   }
   span {
     @include footer-text();
+  }
+}
+
+.footer-copyright > * {
+  margin-bottom: 1rem;
+}
+
+.footer-copyright > :not(:last-child) {
+  margin-right: 1rem;
+}
+
+@supports (display: subgrid) {
+  .footer-copyright {
+    gap: 1rem;
+  }
+
+  .footer-copyright > * {
+    margin-bottom: 0;
+  }
+
+  .footer-copyright > :not(:last-child) {
+    margin-right: 0;
   }
 }
