--- a/src/style.scss
+++ b/src/style.scss
@@ -44,7 +44,20 @@ body {
   padding: 0 var(--main-padding) 3rem var(--main-padding);
   display: flex;
   align-items: center;
-  column-gap: 1rem;
+}
+
+.following > :not(:last-child) {
+  margin-right: 1rem;
+}
+
+@supports (display: subgrid) {
+  .following {
+    column-gap: 1rem;
+  }
+
+  .following > :not(:last-child) {
+    margin-right: 0;
+  }
 }
 
 .following-title {
